# petool

./: .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tmp-zhipu-body.json  tmp-zhipu-stream-body.json  tsconfig.node.tsbuildinfo  vite.config.ts  vite.config.ts.timestamp-1771588639518-3925b3c99ab638.mjs
.claude/: settings.local.json
backend/: .env  .env.example  README.md  auth_utils.py  database.py  main.py  pyproject.toml  requirements.txt  schemas.py
backend/routers/: __init__.py  account.py  auth.py  ocr.py  payment.py  proxy.py
browser-sidecar/: package-lock.json  package.json
browser-sidecar/scripts/: build.mjs
browser-sidecar/src/: index.mjs  index1.mjs
example-skills/file-analyzer/: README.md  index.js  skill.json
example-skills/hello-world-js/: README.md  index.js  skill.json
scripts/: tauri-dev.mjs
scripts/browser/: bench-sidecar.mjs  prepare-sidecar.mjs
src/: App.vue  HomeWorkspace.vue  main.ts  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/resources/pdfium/: README.md
src-tauri/src/: main.rs  state.rs
src-tauri/src/commands/: chat.rs  config.rs  fs.rs  mcp.rs  mod.rs  petool_account.rs  scheduler.rs  skills.rs
src-tauri/src/commands/chat/: browser_tools.rs  commands.rs  image_tools.rs  llm_provider.rs  process_tools.rs  storage.rs  stream.rs  tool_catalog.rs  tool_catalog_header.rs  tool_executor.rs  web_tools.rs
src-tauri/src/models/: chat.rs  config.rs  mcp.rs  mod.rs  skill.rs
src-tauri/src/services/: database.rs  llm.rs  mcp_client.rs  memory.rs  mod.rs  node_runtime.rs  pdf_parse.rs  skill_manager.rs
src-tauri/src/services/browser/: ipc.rs  manager.rs  mod.rs  paths.rs  types.rs
src-tauri/src/services/desktop/: manager.rs  mod.rs  types.rs
src-tauri/src/services/desktop/win/: capture.rs  com_automation.rs  com_excel.rs  com_ppt.rs  com_word.rs  input.rs  mod.rs  uia.rs  window.rs
src-tauri/src/services/scheduler/: executor.rs  manager.rs  mod.rs  models.rs  schedule.rs  store.rs
src-tauri/src/utils/: mod.rs
src/components/ChatPanel/: index.vue
src/components/FileExplorer/: FileTree.vue
src/components/InfoPanel/: index.vue
src/components/Settings/: AutomationPanel.vue  index.vue
src/components/Sidebar/: index.vue
src/components/SkillsManager/: index.vue
src/components/chat/: ChatInput.vue  ChatTimeline.vue  Sidebar.vue  TaskMonitor.vue
src/composables/: useChatEventBridge.ts  useChatMessageArtifacts.ts  useDisplayProfile.ts  usePetWindowBehavior.ts  useWindowControls.ts
src/router/: index.ts
src/stores/: chat.ts  config.ts  filesystem.ts  scheduler.ts
src/styles/: account-shell.css  app-shell.css  settings-shell.css
src/utils/: timeline-formatter.ts  toolDisplay.ts
src/views/: AccountView.vue  Home.vue  LoginView.vue  SettingsView.vue
src/views/account/: OrdersPage.vue  ProfilePage.vue  QuotaPage.vue  RenewPage.vue  mock.ts
src/views/settings/: AboutPetoolPage.vue  AdvancedSettingsPage.vue  AgreementPage.vue  FeedbackPage.vue  GeneralSettingsPage.vue  NotificationSettingsPage.vue  TutorialPage.vue
